--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,9 @@
 
                             "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
                             "src/styles.css",
-                            "node_modules/bootstrap/dist/css/bootstrap.min.css"
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "node_modules/bootswatch/dist/united/bootstrap.min.css",
+                            "node_modules/font-awesome/css/font-awesome.min.css"
                         ],
                         "scripts": []
                     },
