--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.2.0-beta1",
+    "bootswatch": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~7.4.0",
+    "sweetalert2": "^11.4.19",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
